src/test/deca/context/invalid/tests/FIELD-void-field.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12: Void Type
// 
// Historique:
//    cree le 01/01/2022


class Test {
   void attributTest;
}


